fixed layout issue

--- a/src/sass/abstracts/_typography.scss
+++ b/src/sass/abstracts/_typography.scss
@@ -12,7 +12,7 @@
     line-height: 90px;
     position: relative;
     z-index: 90;
-    padding: 16% 20% 2rem 20%;
+    padding: 14% 10% 2rem 10%;
 
     @include respond(tab-land) {
         font-size: 80px;
