--- a/src/sass/components/_contactUs.scss
+++ b/src/sass/components/_contactUs.scss
@@ -1,8 +1,7 @@
 #blurVideo {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     min-width: 100%;
     min-height: 100%;
     width: auto;
@@ -45,52 +44,53 @@
         }
     }
 
-    .row {
+    .grid-footer {
         z-index: 11;
+        display: -ms-grid;
+        display: grid;
+        width: 100%;
+        margin-top: 100px;
+        margin-bottom: 40px;
+        padding-top: 40px;
+        grid-auto-columns: 1fr;
+        grid-column-gap: 16px;
+        grid-row-gap: 16px;
+        -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
 
-        .grid-footer {
-            display: -ms-grid;
-            display: grid;
-            width: 100%;
-            margin-top: 100px;
-            margin-bottom: 40px;
-            padding-top: 40px;
-            grid-auto-columns: 1fr;
-            grid-column-gap: 16px;
-            grid-row-gap: 16px;
-            -ms-grid-columns: 1fr 1fr 1fr;
-            grid-template-columns: 1fr 1fr 1fr;
-    
-            .column {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-    
-                .city {
-                    font-size: 40px;
-                    letter-spacing: 0;
-                    line-height: 48px;
-    
-                    @include respond(tab-land) {
-                        font-size: 20px;
-                        line-height: 20px;
-                    }
+        .column {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+
+            .city {
+                font-size: 40px;
+                letter-spacing: 0;
+                line-height: 48px;
+
+                @include respond(tab-land) {
+                    font-size: 20px;
+                    line-height: 20px;
                 }
-    
-                p {
-                    font-size: 28px;
-                    letter-spacing: 0;
-                    line-height: 40px;
-    
-    
-                    @include respond(tab-land) {
-                        font-size: 12px;
-                        line-height: 14px;
-                    }
+            }
+
+            p {
+                font-size: 28px;
+                letter-spacing: 0;
+                line-height: 40px;
+
+
+                @include respond(tab-land) {
+                    font-size: 12px;
+                    line-height: 14px;
                 }
             }
         }
-    
+    }
+
+    .row {
+        z-index: 11;
+
         .grid-footer-social {
             display: -ms-grid;
             display: grid;
@@ -99,7 +99,7 @@
             margin-bottom: 40px;
             padding-top: 40px;
             grid-auto-columns: 1fr;
-            grid-column-gap: 16px;
+            grid-column-gap: 50px;
             grid-row-gap: 16px;
             -ms-grid-columns: 1fr 1fr 1fr 1fr;
             grid-template-columns: 1fr 1fr 1fr 1fr;
